# Cyber-Ops-Lab

./: ..gitignore.swp  .env.example  .gitignore  Index.html  Makefile  README.md  flagged_lines.txt  index.html  intruder.txt  live_scan.txt  nmap_wifi.txt  requirements.txt  rogue_test.txt  test_scan.txt  wifi_scan.txt
.github/: pull_request_template.md
LegacyTools&Analyses/: nohup.out
Research/: Operation_Impreavanti.docx
dashboard/: package-lock.json
docs/: index.html
references/: common-vulns.md  linux-commands.md  regex-guide.md
scripts/: ai_detector.py  dns_lookup.py  lab_runner.py  port_scanner.py
sentinel/: .device_tracer.py.swp  agent.py  agent_local.py  anomaly_detector.py  auto_quarantine.py  benchmark_llm.py  device_tracer.py  launch.py  llm_factory.py  log_cleaner.py  log_stream.py  review.py  (+11 more)
tools/minisoc/: .gitignore  README.md  pyproject.toml
tools/minisoc/configs/: agent.example.yaml  server.example.yaml
tools/minisoc/data/replay_scenarios/: 01_ssh_bruteforce.jsonl  02_password_spray.jsonl  03_new_ip_for_user.jsonl  04_off_hours_login.jsonl  05_impossible_travel.jsonl
tools/minisoc/src/minisoc/: cli.py  replay.py
tools/minisoc/src/minisoc/agent/: sources.py  suspicious.py  tail_auth.py
tools/minisoc/src/minisoc/common/: config.py  log.py  schema.py
tools/minisoc/src/minisoc/server/: api.py
tools/minisoc/src/minisoc/server/alerting/: notifier.py
tools/minisoc/src/minisoc/server/detect/: engine.py
tools/minisoc/src/minisoc/server/storage/: base.py  sqlite.py
tools/minisoc/tests/: test_detections.py  test_storage_sqlite.py
(+64 files in other folders)
