[project]
name = "minisoc"
version = "0.1.0"
description = "Home SOC / Mini-SIEM (Raspberry Pi friendly)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Isaiah"}]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
minisoc = "minisoc.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
